--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Breaking Down Deep Deterministic Policy Gradients in TensorFlow"
+title:  "Deep Deterministic Policy Gradients in TensorFlow"
 date:   2016-08-21
 category: blog_posts
 ---
@@ -21,6 +21,7 @@ MathJax.Hub.Config({
 ## Introduction
 
 Deep Reinforcement Learning has recently gained a lot of traction in the machine learning community due to the significant amount of progress that has been made in the past few years. Traditionally, reinforcement learning algorithms were constrained to tiny, discretized grid worlds, which seriously inhibited them from gaining credibility as being viable machine learning tools.
+Here's a classic example from <a href="#References">Richard Sutton's book<a/>, which I will be referencing a lot. 
 
 {%
     include image.html
@@ -28,7 +29,7 @@ Deep Reinforcement Learning has recently gained a lot of traction in the machine
     caption="Cliff-walking task, Fig. 6.13 from [6]"
 %}
 
- After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, **since most interesting problems in robotic control, etc., fall into this category**. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality problem as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain.
+ After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, **since most interesting problems in robotic control, etc., fall into this category**. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality problem as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain. 
 
 {%
     include image.html
@@ -36,13 +37,17 @@ Deep Reinforcement Learning has recently gained a lot of traction in the machine
     caption="CartPole-v0 environment: OpenAI Gym"
 %}
 
-Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced an **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the pendulum environment. Lets first examine some of the reinforcement learning terminology that was just mentioned to give those who are unfamiliar with DDPG some background.
+Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced a **policy-gradient** **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the pendulum environment. I'll also discuss some of the theory behind it. Regrettably, I can't start with introducing the basics of reinforcement learning since that would make this blog post much too long; however, Richard Sutton's book (linked above), as well as [David Silver's course](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html), are excellent resources to get going with RL.
 
 ## Lets Start With Some Theory
 
-<a href="#Tensorflow">[Wait, I just want to skip to the Tensorflow part]</a>
+<a href="#Tensorflow">[Wait, I just want to skip to the Tensorflow part!]</a>
 
-### Actor-Critic
+### Policy-Gradient Methods
+
+Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). For a more detailed look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy [here](http://karpathy.github.io/2016/05/31/rl/), and a nice explanation from OpenAI [here](https://gym.openai.com/docs/rl#Policy-Gradients).
+
+### Actor-Critic Algorithms
 
 {%
     include image.html
@@ -52,13 +57,13 @@ Google DeepMind has devised a solid algorithm for tackling the continuous action
 
 The Actor-Critic learning algorithm is used to represent the policy function independently of the value function. The policy function structure is known as the _actor_, and the value function structure is referred to as the _critic_. The actor produces an action given the current state of the environment, and the critic produces a TD (Temporal-Difference) error signal given the state and resultant reward. If the critic is estimating the action-value function $Q(s,a)$, it will also need the output of the actor.  The output of the critic drives learning in both the actor and the critic. In Deep Reinforcement Learning, neural networks can be used to represent the actor and critic structures. 
 
-### Off-Policy
+### Off-Policy vs. On-Policy
 
 Reinforcement Learning algorithms which are characterized as off-policy generally employ a separate behavior policy that is independent of the policy being improved upon; the behavior policy is used to simulate trajectories. A key benefit of this separation is that the behavior policy can operate by sampling all actions, whereas the estimation policy can be deterministic (e.g., greedy) <a href="#References">[1]</a>. Q-learning is an off-policy algorithm, since it updates the Q values without making any assumptions about the actual policy being followed. Rather, the Q-learning algorithm simply states that the Q-value corresponding to state $s(t)$ and action $a(t)$ is updated using the Q-value of the next state $s(t + 1)$ and the action $a(t + 1)$ that maximizes the Q-value at state $s(t + 1)$. 
 
 On-policy algorithms directly use the policy that is being estimated to sample trajectories during training. 
 
-### Model-free
+### Model-free Algorithms
 
 Model-free RL algorithms are those that make no effort to learn the underlying dynamics that govern how an agent interacts with the environment. In the case where the environment has a discrete state space and the agent has a discrete number of actions to choose from, a model of the dynamics of the environment is the 1-step transition matrix: $T(s(t + 1)\|s(t), a(t))$. This stochastic matrix gives all of the probabilities for arriving at a desired state given the current state and action. Clearly, for problems with high-dimensional state and action spaces, this matrix is incredibly expensive in space and time to compute. If your state space is the set of all possible 64 x 64 RGB images and your agent has 18 actions available to it, the transition matrix's size is  $\|S \times S \times A\| \approx \|(68.7 \times 10^{9}) \times (68.7 \times 10^9) \times 18\|$, and at 32 bits per matrix element, thats around $3.4 \times 10^{14}$ GB to store it in RAM! 
 
@@ -68,7 +73,7 @@ Rather than dealing with all of that, model-free algorithms directly estimate th
 
 At its core, DDPG is a policy gradient algorithm that uses a stochastic behavior policy for good exploration but estimates a **deterministic** target policy, which is much easier to learn. Policy gradient algorithms utilize a form of policy iteration: they evaluate the policy, and then follow the policy gradient to maximize performance. Since DDPG is off-policy and uses a deterministic target policy, this allows for the use of the Deterministic Policy Gradient theorem (which will be derived shortly). DDPG is an actor-critic algorithm as well; it primarily uses two neural networks, one for the actor and one for the critic. These networks compute action predictions for the current state and generate a temporal-difference (TD) error signal each time step. The input of the actor network is the current state, and the output is a single real value representing an action chosen from a **continuous** action space (whoa!). The critic's output is simply the estimated Q-value of the current state and of the action given by the actor. The deterministic policy gradient theorem provides the update rule for the weights of the actor network. The critic network is updated from the gradients obtained from the TD error signal. 
 
-Sadly, it turns out that a vanilla, deep actor-critic algorithm that is off-policy and model-free tends to behave poorly, resisting all of the most valiant efforts to get it to converge. The following are most likely some of the key conspirators: 
+Sadly, it turns out that tossing neural networks at DPG results in an algorithm that behaves poorly, resisting all of your most valiant efforts to get it to converge. The following are most likely some of the key conspirators: 
 
 1. In general, training and evaluating your policy and/or value function with thousands of temporally-correlated simulated trajectories leads to the introduction of enormous amounts of variance in your approximation of the true Q-function (the critic). The TD error signal is excellent at compounding the variance introduced by your bad predictions over time. It is highly suggested to use a replay buffer to store the **experiences** of the agent during training, and then randomly sample experiences to use for learning in order to break up the temporal correlations within different training episodes. This technique is known as **experience replay**. DDPG uses this. 
 
@@ -101,7 +106,7 @@ $$
 
 Notice that the policy term in the expectation is not a distribution over actions. It turns out that all you need is the gradient of the output of the critic network w.r.t. its parameters, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
 
-**If you would like to move on to the code, feel free to <a href="#Tensorflow">skip ahead</a> here.** Since I think the proof of the deterministic policy gradient theorem is quite illuminating, I'd like to demonstrate it here before moving on to the code.
+I think the proof of the deterministic policy gradient theorem is quite illuminating, so I'd like to demonstrate it here before moving on to the code.
 
 <div class="theorem">
 (Deterministic Policy Gradient Theorem). 
@@ -120,7 +125,7 @@ $$
 
 <div class="proof">
 
-For a greedy stochastic policy $ \mu (a | s, \theta)$ over a continuous action space, a global maximization step is required at every time step. Rather, we employ a deterministic policy $ \mu (s | \theta) $ and update the policy parameters by moving them in the direction of the gradient of the action-value function. We take an expectation to average over the suggested directions of improvement from each state w.r.t. the state distribution under the target policy $\mu'$.
+For a greedy stochastic policy $ \mu (a | s, \theta)$ over a continuous action space, a global maximization step is required at every time step. Rather, we employ a deterministic policy $ \mu (s | \theta) $ and update the policy parameters by moving them in the direction of the gradient of the action-value function. We take an expectation to average over the suggested directions of improvement from each state w.r.t. the state distribution under the target policy $\mu'$, given by $\rho^{\mu'}(s)$.
 
 $$
 \begin{equation}
@@ -141,7 +146,7 @@ $$
 $$
 </div>
 
-The expectation in the right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't show or derive the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
+The expectation in the right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows for all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. 
 
 <a name="Tensorflow"></a> 
 
@@ -207,38 +212,43 @@ Okay, lets define our actor and critic networks. We're going to use tflearn to c
 
 {% highlight python %}
 
-...
+class ActorNetwork(object):
 
-def create_actor_network(self): 
-    inputs = tflearn.input_data(shape=[None, self.s_dim])
-    net = tflearn.fully_connected(inputs, 400, activation='relu')
-    net = tflearn.fully_connected(net, 300, activation='relu')
-    # Final layer weights are init to Uniform[-3e-3, 3e-3]
-    w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
-    out = tflearn.fully_connected(net, self.a_dim, activation='tanh', weights_init=w_init)
-    scaled_out = tf.mul(out, self.action_bound) # Scale output to -action_bound to action_bound
-    return inputs, out, scaled_out 
+    ...
 
-...
+    def create_actor_network(self): 
+        inputs = tflearn.input_data(shape=[None, self.s_dim])
+        net = tflearn.fully_connected(inputs, 400, activation='relu')
+        net = tflearn.fully_connected(net, 300, activation='relu')
+        # Final layer weights are init to Uniform[-3e-3, 3e-3]
+        w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
+        out = tflearn.fully_connected(net, self.a_dim, activation='tanh', weights_init=w_init)
+        scaled_out = tf.mul(out, self.action_bound) # Scale output to -action_bound to action_bound
+        return inputs, out, scaled_out 
 
-def create_critic_network(self):
-    inputs = tflearn.input_data(shape=[None, self.s_dim])
-    action = tflearn.input_data(shape=[None, self.a_dim])
-    net = tflearn.fully_connected(inputs, 400, activation='relu')
-    # Add the action tensor in the 2nd hidden layer
-    # Use two temp layers to get the corresponding weights and biases
-    t1 = tflearn.fully_connected(net, 300)
-    t2 = tflearn.fully_connected(action, 300)
-    net = tflearn.activation(tf.matmul(net,t1.W) + tf.matmul(action, t2.W) + t2.b, activation='relu')
-    # linear layer connected to 1 output representing Q(s,a) 
-    # Weights are init to Uniform[-3e-3, 3e-3]
-    w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
-    out = tflearn.fully_connected(net, 1, weights_init=w_init)
-    return inputs, action, out
+
+class CriticNetwork(object):
+
+    ...
+
+    def create_critic_network(self):
+        inputs = tflearn.input_data(shape=[None, self.s_dim])
+        action = tflearn.input_data(shape=[None, self.a_dim])
+        net = tflearn.fully_connected(inputs, 400, activation='relu')
+        # Add the action tensor in the 2nd hidden layer
+        # Use two temp layers to get the corresponding weights and biases
+        t1 = tflearn.fully_connected(net, 300)
+        t2 = tflearn.fully_connected(action, 300)
+        net = tflearn.activation(tf.matmul(net,t1.W) + tf.matmul(action, t2.W) + t2.b, activation='relu')
+        # linear layer connected to 1 output representing Q(s,a) 
+        # Weights are init to Uniform[-3e-3, 3e-3]
+        w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
+        out = tflearn.fully_connected(net, 1, weights_init=w_init)
+        return inputs, action, out
 
 {% endhighlight %}
 
-I would suggest placing these two functions in separate Actor and Critic classes. The details for each network are in the appendix of the DDPG paper <a href=#References>[5]</a>. They're pretty simple, though. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is on the real line but is bounded and closed, as is the case for the pendulum task. 
+I would suggest placing these two functions in separate Actor and Critic classes, as shown above. The hyperparameter and layer details for the networks are in the appendix of the DDPG paper <a href="#References">[5]</a>. The networks for the low-dimensional state-space problems are pretty simple, though. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is on the real line but is bounded and closed, as is the case for the pendulum task. 
 
 Notice that the critic network takes both the state and the action as inputs; however, the action input skips the first layer. This is a design decision that has experimentally worked well. Accommodating this with tflearn was a bit tricky.
 
@@ -259,10 +269,10 @@ self.update_target_network_params = \
 
 {% endhighlight %}
 
-This looks a bit convoluted, but it's actually a great display of Tensorflow's flexibility. You're defining a Tensorflow Op, ```update_target_network_params```, that will copy the parameters of the online network with a mixing factor $\tau$. Make sure you're copying over the correct Tensorflow variables by checking what is being returned by ```tf.trainable_variables()```. You'll need to define this Op for both the actor and critic networks. 
+This looks a bit convoluted, but it's actually a great display of Tensorflow's flexibility. You're defining a Tensorflow Op, ```update_target_network_params```, that will copy the parameters of the online network with a mixing factor $\tau$. Make sure you're copying over the correct Tensorflow variables by checking what is being returned by ```tf.trainable_variables()```. You'll need to define this Op for both the actor and critic. 
 
 Let's define the gradient computation and optimization Tensorflow operations. 
-We'll use [ADAM](https://arxiv.org/abs/1412.6980) as our optimization method. It's sort of become a de-facto standard instead of SGD, now that it's implemented in plug-n-play deep-learning libraries such as tflearn and keras.
+We'll use [ADAM](https://arxiv.org/abs/1412.6980) as our optimization method. It's sort of replaced SGD as the de-facto standard, now that it's implemented in so many plug-and-play deep-learning libraries such as tflearn and keras and tends to outperform it.
 
 For the actor network...
 
@@ -280,7 +290,7 @@ self.optimize = tf.train.AdamOptimizer(self.learning_rate).\
 
 {% endhighlight %}
 
-Notice how the gradients are combined. ```tf.gradients()``` makes it quite easy to implement the Deterministic Policy Gradient equation (Eq. 4). I negate the action gradient since you want the policy to do gradient ascent, not descent. Tensorflow will take the sum and average of the gradients of your minibatch.
+Notice how the gradients are combined. ```tf.gradients()``` makes it quite easy to implement the Deterministic Policy Gradient equation (Eq. 4). I negate the action-value gradient since we want the actor to follow the action-value gradients. Tensorflow will take the sum and average of the gradients of your minibatch.
 
 Then, for the critic network...
 
@@ -299,11 +309,13 @@ self.action_grads = tf.gradients(self.out, self.action)
 
 {% endhighlight %}
 
-This is exactly Eq. 2. Make sure to grab the action gradients at the end there to pass to the policy network for gradient computation. 
+This is exactly Eq. 2. Make sure to grab the action-value gradients at the end there to pass to the policy network for gradient computation. 
 
 I like to encapsulate calls to my Tensorflow session to keep things organized and readable in my training code. For brevity's sake, I'll just show the ones for the actor network.
 
 {% highlight python %}
+
+...
 
 def train(self, inputs, a_gradient):
     self.sess.run(self.optimize, feed_dict={
@@ -324,12 +336,23 @@ def predict_target(self, inputs):
 def update_target_network(self):
     self.sess.run(self.update_target_network_params)
 
+...
+
 {% endhighlight %}
 
 Now, lets show the main training loop and we'll be done! 
 
 {% highlight python %}
 
+# Constants
+TAU = 0.001
+ACTOR_LEARNING_RATE = 0.001
+CRITIC_LEARNING_RATE = 0.0001
+BUFFER_SIZE = 1000000 
+MINIBATCH_SIZE = 64
+MAX_EPISODES = 50000
+MAX_EP_STEPS = 1000
+GAMMA = 0.99
 ... 
 
 with tf.Session() as sess:
@@ -368,8 +391,8 @@ with tf.Session() as sess:
                 env.render()
 
             # Added exploration noise. In the literature, they use
-            # Ornstein-Uhlenbeck stochastic process for problem domains
-            # with momentum
+            # the Ornstein-Uhlenbeck stochastic process for control tasks
+            # that deal with momentum
             a = actor.predict(np.reshape(s, (1, 3))) + (1. / (1. + i + j))
 
             s2, r, terminal, info = env.step(a[0])
@@ -423,7 +446,7 @@ Tensorflow is a bit low-level, so it's definitely recommended to use tools like 
     caption="Results from running the code on Pendulum-v0"
 %}
 
-Despite the fact that I ran this code on the courageous CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially see better performance (besides running the code on a GPU lol):
+Despite the fact that I ran this code on the courageous CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially get better performance (besides running the code on a GPU lol):
 
 1. Use a priority algorithm for sampling from the replay buffer instead of uniformly sampling. See my summary of [Prioritized Experience Replay](http://pemami4911.github.io/paper_summaries/2016/01/26/prioritizing-experience-replay.html).
 
@@ -431,7 +454,7 @@ Despite the fact that I ran this code on the courageous CPU of my Macbook Air, i
 
 3. Use recurrent networks to capture temporal nuances within the environment. 
 
-In [5], they also used convolutional neural networks to tackle problems with higher-dimensional state spaces. They were able to learn good policies on challenging control tasks with just pixel inputs.  
+The authors of DDPG also used convolutional neural networks to tackle control tasks of higher complexities. They were able to learn good policies with just pixel inputs, which is really cool.  
 
 <a name="References"></a>
 
