BLOG: Draft #4 - Slight code change

--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -259,7 +259,9 @@ You can simply call these creation methods twice, once to create the actor and c
 You can create a Tensorflow Op to update the target network parameters like so: 
 {% highlight python %}
 
- self.target_network_params = tf.trainable_variables()[len(self.network_params):]
+self.network_params = tf.trainable_variables()
+
+self.target_network_params = tf.trainable_variables()[len(self.network_params):]
 
 # Op for periodically updating target network with online network weights
 self.update_target_network_params = \
