--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -154,6 +154,13 @@ The expectation in the right-hand side of Eq. 6 is exactly what we want. In <a h
 
 Let's get started. 
 
+We're writing code to solve the Pendulum environment in OpenAI gym, which has a low-dimensional state space and a single continuous action within [-2, 2]. The goal is to swing up and balance the pendulum. 
+
+{%
+    include image.html
+    img="/assets/pendulum.png"
+%}
+
 The first part is easy. Set up a data structure to represent your replay buffer. I recommend using a deque from python's collections library. The replay buffer will return a randomly chosen batch of experiences when queried.
 
 {% highlight python %}
