MINOR-MODS: Updated LaTeX equations, added PG references
Fixed the LaTeX equations in Prioritized Exp Replay
and in Dueling Networks. Also added a comment
about REINFORCE and NPG to the blog post.

--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -45,7 +45,7 @@ Google DeepMind has devised a solid algorithm for tackling the continuous action
 
 ### Policy-Gradient Methods
 
-Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). For a more detailed look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy [here](http://karpathy.github.io/2016/05/31/rl/), and a nice explanation from OpenAI [here](https://gym.openai.com/docs/rl#Policy-Gradients).
+Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with some RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). There are extensions to the vanilla-PG algorithm such as [REINFORCE](https://webdocs.cs.ualberta.ca/~sutton/williams-92.pdf) and [Natural Policy Gradients](http://papers.nips.cc/paper/2073-a-natural-policy-gradient.pdf) that make the algorithm much more viable. For a first look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy on [here](http://karpathy.github.io/2016/05/31/rl/), and a nice explanation from OpenAI [here](https://gym.openai.com/docs/rl#Policy-Gradients).
 
 ### Actor-Critic Algorithms
 
