--- a/_posts/paper_summaries/2016-07-30-ResNets.markdown
+++ b/_posts/paper_summaries/2016-07-30-ResNets.markdown
@@ -3,8 +3,9 @@ layout: post
 title: "Deep Residual Learning for Image Recognition"
 date: 2016-07-30
 category: paper_summaries
+paper_ref: He, et al. 2015
 ---
-[He, et al. 2015](https://arxiv.org/pdf/1512.03385v1.pdf)
+[{{ page.paper_ref }}](https://arxiv.org/pdf/1512.03385v1.pdf)
 
 ## Summary
 
