--- a/_posts/paper_summaries/2016-08-02-A3C.markdown
+++ b/_posts/paper_summaries/2016-08-02-A3C.markdown
@@ -3,9 +3,10 @@ layout: post
 title: "Asynchronous Methods for Deep Reinforcement Learning"
 date: 2016-07-30
 category: paper_summaries
+paper_ref: Mnih, et al. 2016
 ---
 
-[Mnih, et al. 2016](http://arxiv.org/pdf/1602.01783v1.pdf)
+[{{ page.paper_ref }}](http://arxiv.org/pdf/1602.01783v1.pdf)
 
 ## Summary
 
