--- a/_posts/paper_summaries/2016-09-04-VIME.markdown
+++ b/_posts/paper_summaries/2016-09-04-VIME.markdown
@@ -35,7 +35,7 @@ Key point: **The agent is encouraged to take actions that lead to states that ar
 $$
 \begin{equation}
 
-I(S_{t+1}; \Theta | \xi_{t}, a_{t}) = \mathbb{E}_{s_{t+1} ~ P(.| \xi_{t}, a_{t})} \big [ D_{KL} [p(\theta|\xi_{t}, a_{t}) \hspace{2pt} || \hspace{2pt} p(\theta|\xi_{t})] \big]
+I(S_{t+1}; \Theta | \xi_{t}, a_{t}) = \mathbb{E}_{s_{t+1} \sim P(.| \xi_{t}, a_{t})} \big [ D_{KL} [p(\theta|\xi_{t}, a_{t}) \hspace{2pt} || \hspace{2pt} p(\theta|\xi_{t})] \big]
 
 \end{equation}
 $$
@@ -45,7 +45,7 @@ Using the variational distribution $q$, we can approximate our posterior distrib
 $$
 \begin{equation}
 
-L[q(\theta; \phi), \mathcal{D}] = \mathbb{E}_{\theta ~ q(.;\phi)} \big[ \log p (\mathcal{D} | \theta ) \big] -  D_{KL} [q(\theta|\phi) \hspace{2pt} || \hspace{2pt} p(\theta)]
+L[q(\theta; \phi), \mathcal{D}] = \mathbb{E}_{\theta \sim q(.;\phi)} \big[ \log p (\mathcal{D} | \theta ) \big] -  D_{KL} [q(\theta|\phi) \hspace{2pt} || \hspace{2pt} p(\theta)]
 
 \end{equation}
 $$
@@ -61,7 +61,7 @@ r'(s_{t}, a_{t}, s_{t+1}) = r(s_{t}, a_{t}) + \eta D_{KL} [ q(\theta; \phi_{t+1}
 \end{equation}
 $$
 
-The hyperparameter $\eta$ controls the amount of incentive to explore (the curiousity). See Section 2.4 of the paper for an analogy drawn to model compression (the intuition is that the most informative state-action sequence up to time $t$ is the one with the shortest description length). Section 2.5 contains implementation details and an outline of the overall algorithm. One of the key points of Section 2.5 is that the use of a fully factorized Gaussian allows the KL-divergence in Eq. 3 to be computedly simply.
+The KL-divergence between the new approximate posterior and the old approximate posterior thereby represents the information gained by having taken $a_{t}$, ended up in state $s_{t+1}$. The hyperparameter $\eta$ controls the amount of incentive to explore (the curiosity). See Section 2.4 of the paper for an analogy drawn to model compression (the intuition is that the most informative state-action sequence up to time $t$ is the one with the shortest description length). Section 2.5 contains implementation details and an outline of the overall algorithm. One of the key points of Section 2.5 is that the use of a fully factorized Gaussian allows the KL-divergence in Eq. 3 to be computedly simply.
 
 ## Broader Impact on the RL Community
 
