--- a/_posts/papersummaries/2016-07-30-ResNets.markdown
+++ b/_posts/papersummaries/2016-07-30-ResNets.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Deep Residual Learning for Image Recognition"
 date: 2016-07-30
-category: paper_summaries
+category: papersummaries
 paper_ref: He, et al. 2015
 ---
 [{{ page.paper_ref }}](https://arxiv.org/pdf/1512.03385v1.pdf)
