--- a/_posts/papersummaries/2016-08-02-A3C.markdown
+++ b/_posts/papersummaries/2016-08-02-A3C.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Asynchronous Methods for Deep Reinforcement Learning"
 date: 2016-07-30
-category: paper_summaries
+category: papersummaries
 paper_ref: Mnih, et al. 2016
 ---
 
