--- a/_posts/papersummaries/2016-08-02-A3C.markdown
+++ b/_posts/papersummaries/2016-08-02-A3C.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Asynchronous Methods for Deep Reinforcement Learning"
 date: 2016-07-30
 category: papersummaries
-paper_ref: Mnih, et al. 2016
+paper_ref: Mnih, et al., 2016
 ---
 
 [{{ page.paper_ref }}](http://arxiv.org/pdf/1602.01783v1.pdf)
