URL CHANGES: Made the urls finally look nice
Added jekyll-redirect to keep links from breaking (hopefully)

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -2,7 +2,9 @@
 layout: post
 title:  "Deep Deterministic Policy Gradients in TensorFlow"
 date:   2016-08-21
-category: blog_posts
+category: blog
+redirect_from: 
+    - /blog_posts/2016/08/21/ddpg-rl.html
 ---
 
 <script type="text/javascript" async
