--- a/_posts/paper-summaries/2016-03-23-nfq.markdown
+++ b/_posts/paper-summaries/2016-03-23-nfq.markdown
@@ -2,8 +2,11 @@
 layout: post
 title: Neural Fitted Q Iteration 
 date: 2016-03-23
-category: papersummaries
+category: paper-summaries
 paper_ref: Riedmiller, M. 2005
+redirect_from:
+    - /papersummaries/2016/03/23/nfq.html
+    - /paper_summaries/2016/03/23/nfq.html
 ---
 
 [{{ page.paper_ref }}](http://ml.informatik.uni-freiburg.de/_media/publications/rieecml05.pdf)
