--- a/_posts/paper-summaries/2016-09-04-VIME.markdown
+++ b/_posts/paper-summaries/2016-09-04-VIME.markdown
@@ -2,8 +2,11 @@
 layout: post
 title: Variational Information Maximizing Exploration
 date: 2016-09-04 1:00 PM
-category: papersummaries
+category: paper-summaries
 paper_ref: Houthooft, et al., 2016 ~ OpenAI
+redirect_from:
+    - /papersummaries/2016/09/04/VIME.html
+    - /paper_summaries/2016/09/04/VIME.html
 ---
 
 <script type="text/x-mathjax-config">
