Updated code snippets to mirror changes to ddpg.py

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -340,7 +340,7 @@ def predict(self, inputs):
     })
 
 def predict_target(self, inputs):
-    return self.sess.run(self.target_out, feed_dict={
+    return self.sess.run(self.target_scaled_out, feed_dict={
         self.target_inputs: inputs
     })
 
@@ -357,8 +357,8 @@ Now, lets show the main training loop and we'll be done!
 
 # Constants
 TAU = 0.001
-ACTOR_LEARNING_RATE = 0.001
-CRITIC_LEARNING_RATE = 0.0001
+ACTOR_LEARNING_RATE = 0.0001
+CRITIC_LEARNING_RATE = 0.001
 BUFFER_SIZE = 1000000 
 MINIBATCH_SIZE = 64
 MAX_EPISODES = 50000
