--- a/_posts/lecture-notes/2017-01-23-plp-8.md
+++ b/_posts/lecture-notes/2017-01-23-plp-8.md
@@ -71,4 +71,4 @@ The scope of a binding is the part of the program (textually) in which the bindi
 
 * Statically scoped (lexically scoped) - scope determined by lexical structure. All bindings for identifiers can be resolved by examining the program. Typically choose the most recent active binding made at compile time. Used by most compiled languages.
 * Dynamically scoped - scope determined at runtime and depends on flow of execution
-
+* Global and local variabes are examples of static scopes
